--- a/public/logViewer.html
+++ b/public/logViewer.html
@@ -54,15 +54,15 @@ body,html {
 				</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#logs">
-				  <span data-feather="file"></span>
-				  Logs
-				</a>
-			  </li>
-			  <li class="nav-item">
 				<a class="nav-link" href="#gettingstarted">
 				  <span data-feather="file-text"></span>
 				  Getting Started
+				</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#log">
+				  <span data-feather="file"></span>
+				  Logs
 				</a>
 			  </li>
 			  <li class="nav-item">
@@ -93,7 +93,7 @@ body,html {
   </div>
   
 
- <div class="col-9">
+ <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
  <div data-bs-spy="scroll" data-bs-target="#sidebarMenu" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="bg-light p-3  " tabindex="0">
  <div id="dashboard" class="cover page container-fluid vh-100">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -101,7 +101,7 @@ body,html {
       </div> 
 	  <div class="container" > 
 		<div>
-		  <div style="position:relative;padding-top:56.25%;">
+		  <div style="position:relative;padding-top:56.25%;padding-button:56.25%;">
 			<iframe src="./logViewerFrame" frameborder="0" allowfullscreen
 			  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 		  </div>
