--- a/public/logViewer.html
+++ b/public/logViewer.html
@@ -19,10 +19,6 @@ body,html {
     height: 100%;
 }
 
-.page{
-      height: 100%;
-      width:100%
-}
     </style>
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
@@ -99,14 +95,11 @@ body,html {
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Log Dashboard</h1> 
       </div> 
-	  <div class="container" > 
-		<div>
-		  <div style="position:relative;padding-top:56.25%;padding-button:56.25%;">
+	    
+		  <div style="position:relative;padding-top:56.25%;">
 			<iframe src="./logViewerFrame" frameborder="0" allowfullscreen
-			  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-		  </div>
-		</div> 
-	  </div>
+			  style="position:absolute;top:0;left:0;width:100%;height:90%;"></iframe>
+		  </div>  <br><br><br><br><br><br>
 	</div>
 	<div id="gettingstarted" class="cover page container-fluid vh-100">
 		<h1>gettingstarted</h1>
