Node Express Status Monitor

--- a/public/logViewer.html
+++ b/public/logViewer.html
@@ -106,7 +106,7 @@
                      </div>
                      <div style="position:relative;padding-top:56.25%;">
                         <iframe src="./logViewerFrame" frameborder="0" allowfullscreen
-                           style="position:absolute;top:0;left:0;width:100%;height:90%;"></iframe>
+                           style="position:absolute;top:0;left:0;width:100%;height:90%;" title="Online Log Viewer"></iframe>
                      </div>
                      <br><br><br><br><br><br>
                   </div>
@@ -119,8 +119,12 @@
                      <p>Try to scroll this page and look at the navigation bar while scrolling!</p>
                   </div>
                   <div id="stats" class="cover page container-fluid vh-100">
-                     <h1>stats</h1>
-                     <p>Try to scroll this page and look at the navigation bar while scrolling!</p>
+                     <h1>Node Express Status</h1>
+                     <p>Current status of the node application</p>
+                     <div style="position:relative;padding-top:56.25%;">
+                        <iframe src="./status" frameborder="0" allowfullscreen
+                           style="position:absolute;top:0;left:0;width:100%;height:90%;" title="Node Express Status"></iframe>
+                     </div>
                   </div>
                   <div id="reports" class="cover page container-fluid vh-100">
                      <h1>reports</h1>
