--- a/public/logViewer.html
+++ b/public/logViewer.html
@@ -72,13 +72,13 @@
                         <li class="nav-item">
                            <a class="nav-link" href="#log">
                            <span data-feather="file"></span>
-                           Logs
+                           Online Logs
                            </a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="#stats">
                            <span data-feather="users"></span>
-                           Stats
+                           Node Express Status
                            </a>
                         </li>
                         <li class="nav-item">
