--- a/public/logViewer.html
+++ b/public/logViewer.html
@@ -57,16 +57,16 @@
                <nav id="sidebarMenu"  class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
                   <div class="position-sticky pt-3">
                      <ul class="nav flex-column">
-                        <li class="nav-item active">
-                           <a class="nav-link active" aria-current="page" href="#dashboard">
-                           <span data-feather="home"></span>
-                           Dashboard
-                           </a>
-                        </li>
                         <li class="nav-item">
                            <a class="nav-link" href="#gettingstarted">
                            <span data-feather="file-text"></span>
                            Getting Started
+                           </a>
+                        </li>
+                        <li class="nav-item active">
+                           <a class="nav-link active" aria-current="page" href="#dashboard">
+                           <span data-feather="home"></span>
+                           Dashboard
                            </a>
                         </li>
                         <li class="nav-item">
@@ -100,6 +100,10 @@
             </div>
             <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                <div data-bs-spy="scroll" data-bs-target="#sidebarMenu" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="bg-light p-3  " tabindex="0">
+                  <div id="gettingstarted" class="cover page container-fluid vh-100">
+                     <h1>Logging</h1>
+                     <p><code>System.out.println("Hello Logging")</code></p>
+                  </div>
                   <div id="dashboard" class="cover page container-fluid vh-100">
                      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                         <h1 class="h2">Log Dashboard</h1>
@@ -109,10 +113,6 @@
                            style="position:absolute;top:0;left:0;width:100%;height:90%;" title="Online Log Viewer"></iframe>
                      </div>
                      <br><br><br><br><br><br>
-                  </div>
-                  <div id="gettingstarted" class="cover page container-fluid vh-100">
-                     <h1>gettingstarted</h1>
-                     <p>Try to scroll this page and look at the navigation bar while scrolling!</p>
                   </div>
                   <div id="log" class="cover page container-fluid vh-100">
                      <h1>log</h1>
@@ -138,7 +138,10 @@
             </div>
          </div>
       </div>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-      <script src="bootstrap.bundle.min.js"></script>
-     </body>
+      
+          <script src="bootstrap.bundle.min.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script><script src="dashboard.js"></script>
+            </body>
 </html>
