--- a/public/logViewer.html
+++ b/public/logViewer.html
@@ -103,6 +103,19 @@
                   <div id="gettingstarted" class="cover page container-fluid vh-100">
                      <h1>Logging</h1>
                      <p><code>System.out.println("Hello Logging")</code></p>
+                     <p>Logging is the process of recording events or data that occur in an application or system. The origin of logging can be traced back to the early days of computing when computers were primarily used for scientific research and data analysis. In these early days, logging was primarily used for debugging and troubleshooting issues that arose during the operation of the computer.
+
+As computers became more prevalent in the business world, logging began to be used for auditing and compliance purposes. This was particularly important in industries such as finance and healthcare, where strict regulations were in place to ensure the security and privacy of sensitive information.
+
+In the early days of web development, logging was primarily done on the server side. However, with the rise of client-side JavaScript and Single Page Applications (SPAs), logging has also become an important aspect of front-end development.
+
+With the advent of cloud computing and microservices architecture, logging has become even more important. In these environments, logs are used to track the performance of individual microservices and to troubleshoot issues that arise when different services interact with each other.
+
+The evolution of logging has also seen the introduction of new technologies and tools to make logging more efficient and effective. For example, the use of structured logging, which records log data in a structured format such as JSON, has become increasingly popular. This allows for easier parsing and analysis of log data, and also enables the use of machine learning algorithms to detect and predict issues.
+
+Another important development in the field of logging has been the rise of log management and analysis tools such as Elasticsearch, Logstash, and Kibana (ELK) and Splunk. These tools provide a centralized platform for managing and analyzing log data, and also make it easier to search, visualize, and alert on log data in real-time.
+
+In conclusion, logging is an essential aspect of software development and operations. It has evolved significantly since its origins, and continues to evolve in response to the changing needs of developers, operations teams, and businesses. With new technologies and tools emerging, it is important to stay up-to-date with the latest developments in the field of logging, in order to ensure that your applications and systems are running smoothly and securely.</p>
                   </div>
                   <div id="dashboard" class="cover page container-fluid vh-100">
                      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
